feat: Criei os botoes de pessoa juridica e fisica na tela inicial, adicionei o parametro is_legal_person na tabela user, que sera o campo que ira armazenar o tipo do cadastro

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -21,6 +21,11 @@
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
+  <div class="form-group">
+    <%= f.label :is_legal_person, "É pessoa jurídica?" %>
+    <%= f.select :is_legal_person, [["Sim", true], ["Não", false]], {}, class: "form-control" %>
+  </div>
+
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
