--- a/app/assets/stylesheets/components/_tables.scss
+++ b/app/assets/stylesheets/components/_tables.scss
@@ -51,27 +51,27 @@
   }
 }
 
-.btn-orange {
-  background-color: #ff6600;
-  border: none;
-  color: white;
-  height: 50px;
-  width: 32px;
-  padding: 0;
-  text-align: center;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 6px;
+// .btn-orange {
+//   background-color: #ff6600;
+//   border: none;
+//   color: white;
+//   height: 50px;
+//   width: 32px;
+//   padding: 0;
+//   text-align: center;
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//   border-radius: 6px;
 
-  &:hover {
-    background-color: #e25500;
-  }
+//   &:hover {
+//     background-color: #e25500;
+//   }
 
-  i {
-    font-size: 0.85rem;
-  }
-}
+//   i {
+//     font-size: 0.85rem;
+//   }
+// }
 
 .btn-orange-pill {
   background-color: #ff6600;
